--- a/notebooks/advanced_visualization.ipynb
+++ b/notebooks/advanced_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7d2a35cc",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "csv on  /Users/olivercordoba/Documents/github/IFT6758/IFT6758/ift6758/data/tabular\n"
+      "csv on  /home/williamglazer/Documents/school/DS/IFT6758/data/tabular\n"
      ]
     }
    ],
@@ -52,16 +52,15 @@
     "#define initial parameters\n",
     "im      = Image.open(r'{r}/figures/nhl_rink.png'.format(r=root_path)) \n",
     "im2     = Image.open(r'{r}/figures/nhl_rink_top.png'.format(r=root_path)) \n",
-    "seasons = ['20162017','20172018','20182019','20192020', '20202021']\n",
-    "teams   = ['NOP','NJD','NYI','NYR','PHI','PIT','BOS','BUF','MTL','OTT','TOR','FLA','WSH','CHI','DET','NSH','STL','CGY','COL','EDM','VAN','ANA','DAL','LAK','SJS','CBJ','MIN','WPG','ARI','VGK','SEA']\n",
+    "seasons = ['20162017','20172018','20182019','20192020', '20202021', '20212022']\n",
+    "teams   = ['TOR', 'OTT', 'STL', 'CHI', 'EDM', 'CGY', 'LAK', 'SJS', 'MTL', 'BUF', 'NYR', 'NYI', 'BOS', 'CBJ', 'DET', 'TBL', 'NJD', 'FLA', 'WSH', 'PIT', 'MIN', 'CAR', 'WPG', 'ANA', 'DAL', 'NSH', 'PHI', 'COL', 'ARI', 'VAN']\n",
     "\n",
-    "print('csv on ',root_path+\"/ift6758/data/tabular\") \n",
-    "#csv on  /home/williamglazer/Documents/school/DS/IFT6758/ift6758/data/tabular"
+    "print('csv on ',root_path+\"/data/tabular\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "a9db6ec1",
    "metadata": {},
    "outputs": [],
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "aef12709",
    "metadata": {
     "scrolled": true
@@ -84,14 +83,12 @@
    "outputs": [
     {
      "data": {
+      "text/plain": "interactive(children=(Dropdown(description='Season', options=('20162017', '20172018', '20182019', '20192020', …",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f811c79ee50a46e5ae23b1cfadcb46e7",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Season', options=('20162017', '20172018', '20182019', '20192020', …"
-      ]
+       "version_minor": 0,
+       "model_id": "ab05978a83954fbbb1a9d56ae28f559b"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -110,7 +107,7 @@
     "    print('season: {s} team: {t} '.format(s=season,t=team))\n",
     "    \n",
     "    #load data for selected season / team\n",
-    "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
+    "    csv_path  = root_path+'/data/tabular/'+season+'.csv'\n",
     "    df = pd.read_csv(csv_path)\n",
     "    df2 =df[df['offense_team_tricode'] == team]\n",
     "    \n",
@@ -160,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "80c4ac4d",
    "metadata": {},
    "outputs": [],
@@ -180,34 +177,17 @@
     "def transposeY(xval, yval):\n",
     "    if xval < 0 :\n",
     "        yval = yval*(-1)\n",
-    "    return yval\n",
-    "\n",
-    "        "
+    "    return yval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "id": "8411e68e",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ec5454f17ed473f88554834955852f3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Season', options=('20162017', '20172018', '20182019', '20192020', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     " based on season and team, draw all shooting point on the map\n",
@@ -221,7 +201,7 @@
     "    print('season: {s} team: {t} '.format(s=season,t=team))\n",
     "    \n",
     "    # load data for selected season / team\n",
-    "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
+    "    csv_path  = root_path+'/data/tabular/'+season+'.csv'\n",
     "    df = pd.read_csv(csv_path)\n",
     "    \n",
     "    # league shoot count , create unique key\n",
@@ -301,7 +281,7 @@
     "        colorscale='Viridis'\n",
     "        )\n",
     "    )\n",
-    "    ''' \n",
+    "    '''\n",
     "    colorscale = [[0, 'Blue'], [0.5, 'white'], [1, 'Red']]\n",
     "    # Trace test 03 : Contour\n",
     "    \n",
@@ -310,9 +290,10 @@
     "            z=df_team.loc[:, 'excess_shot_rate'],\n",
     "            x=df_team.loc[:, 'x_abs'],\n",
     "            y=df_team.loc[:, 'y_abs'],\n",
+    "            contours=dict(start=-0.275, end=0.275, size=0.05),\n",
     "            opacity=0.6,\n",
-    "            colorscale=colorscale\n",
-    "        #colorscale='Viridis'\n",
+    "            colorscale=colorscale,\n",
+    "            line_smoothing=0.85,\n",
     "        )\n",
     "    )\n",
     "    \n",
@@ -365,51 +346,60 @@
     "        template=\"plotly_white\"\n",
     "    )\n",
     "\n",
-    "    # run the visualization    \n",
-    "    fig.show()\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "w = interactive(vgraph,  season=widgets.Dropdown(options=seasons, value='20162017', description='Season',),\n",
-    "                         team  =widgets.Dropdown(options=teams,   value='MTL',      description='Team'),\n",
-    "                       )\n",
-    "\n",
-    "\n",
-    "display(w)"
+    "    # save the visualization\n",
+    "    fig.write_html('../blog/plots/plotly_{s}_{t}.html'.format(s=season,t=team), include_plotlyjs=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "40c6ee8b",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['TOR' 'OTT' 'STL' 'CHI' 'EDM' 'CGY' 'LAK' 'SJS' 'MTL' 'BUF' 'NYR' 'NYI'\n",
-      " 'BOS' 'CBJ' 'DET' 'TBL' 'NJD' 'FLA' 'WSH' 'PIT' 'MIN' 'CAR' 'WPG' 'ANA'\n",
-      " 'DAL' 'NSH' 'PHI' 'COL' 'ARI' 'VAN']\n"
+      "season: 20212022 team: TOR \n",
+      "season: 20212022 team: OTT \n",
+      "season: 20212022 team: STL \n",
+      "season: 20212022 team: CHI \n",
+      "season: 20212022 team: EDM \n",
+      "season: 20212022 team: CGY \n",
+      "season: 20212022 team: LAK \n",
+      "season: 20212022 team: SJS \n",
+      "season: 20212022 team: MTL \n",
+      "season: 20212022 team: BUF \n",
+      "season: 20212022 team: NYR \n",
+      "season: 20212022 team: NYI \n",
+      "season: 20212022 team: BOS \n",
+      "season: 20212022 team: CBJ \n",
+      "season: 20212022 team: DET \n",
+      "season: 20212022 team: TBL \n",
+      "season: 20212022 team: NJD \n",
+      "season: 20212022 team: FLA \n",
+      "season: 20212022 team: WSH \n",
+      "season: 20212022 team: PIT \n",
+      "season: 20212022 team: MIN \n",
+      "season: 20212022 team: CAR \n",
+      "season: 20212022 team: WPG \n",
+      "season: 20212022 team: ANA \n",
+      "season: 20212022 team: DAL \n",
+      "season: 20212022 team: NSH \n",
+      "season: 20212022 team: PHI \n",
+      "season: 20212022 team: COL \n",
+      "season: 20212022 team: ARI \n",
+      "season: 20212022 team: VAN \n"
      ]
     }
    ],
    "source": [
-    "csv_path  = root_path+'/ift6758/data/tabular/'+'20162017'+'.csv'\n",
-    "df = pd.read_csv(csv_path)\n",
-    "df.head()\n",
-    "print(df['offense_team_tricode'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50ee77d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+    "from itertools import product\n",
+    "\n",
+    "for s, t in product(['20212022'], teams):\n",
+    "    vgraph(s, t)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
