added pipeline class

--- a/notebooks/5.feature_engineering.ipyb.ipynb
+++ b/notebooks/5.feature_engineering.ipyb.ipynb
@@ -19,13 +19,12 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "from ift6758.data import Dataset\n",
-    "from ift6758.data.features import mirror_coordinates, append_shot_angle, append_shot_distance, replace_nan_by\n",
+    "from ift6758.pipeline import ExperimentPipeline, DEFAULT_TRANSFORMATIONS\n",
     "\n",
-    "df = Dataset(\n",
+    "df = ExperimentPipeline.get_data(\n",
     "    tabular_dir='../data/tabular',\n",
-    "    transformations=[mirror_coordinates, append_shot_angle, append_shot_distance, replace_nan_by]\n",
-    ").preprocess()"
+    "    transformations=DEFAULT_TRANSFORMATIONS\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -172,7 +171,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<seaborn.axisgrid.JointGrid at 0x7f680d591120>"
+      "text/plain": "<seaborn.axisgrid.JointGrid at 0x7fabccf9e590>"
      },
      "execution_count": 8,
      "metadata": {},
