feature engineering additional functions, cleaner refactoring

--- a/notebooks/1.data_extraction.ipynb
+++ b/notebooks/1.data_extraction.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "from ift6758.data import NHLLoader, NHLCleaner"
    ],
+   "outputs": [],
    "metadata": {
     "collapsed": false
    }
@@ -130,8 +130,8 @@
    ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1Wx8N8pbRbCckZCbX9vm1r1bGFJo3CEKS\n",
@@ -156,27 +156,224 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "source": [
+    "df = NHLCleaner.format_season('ift6758/data/raw/20162017.json')\n",
+    "df.head()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80399\n"
-     ]
-    },
-    {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "         game starttime          game endtime  gameId  offense_team_id  \\\n0  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       0               10   \n1  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       1                9   \n2  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       2                9   \n3  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       3                9   \n4  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       4               10   \n\n     offense_team_name offense_team_tricode  goal  x_coords  y_coords  \\\n0  Toronto Maple Leafs                  TOR     0     -77.0       5.0   \n1      Ottawa Senators                  OTT     0      86.0      13.0   \n2      Ottawa Senators                  OTT     0      23.0     -38.0   \n3      Ottawa Senators                  OTT     0      33.0     -15.0   \n4  Toronto Maple Leafs                  TOR     0     -34.0      28.0   \n\n   goalie_id        goalie_name  shooter_id     shooter_name   shot type  \\\n0    8467950     Craig Anderson     8478483  Mitchell Marner  Wrist Shot   \n1    8475883  Frederik Andersen     8467967      Chris Kelly  Wrist Shot   \n2    8475883  Frederik Andersen     8476879        Cody Ceci  Wrist Shot   \n3    8475883  Frederik Andersen     8474578    Erik Karlsson   Slap Shot   \n4    8467950     Craig Anderson     8475716  Martin Marincin  Wrist Shot   \n\n  empty net  strength_shorthand  strength_even  strength_powerplay  \n0     False                 NaN            NaN                 NaN  \n1     False                 NaN            NaN                 NaN  \n2     False                 NaN            NaN                 NaN  \n3     False                 NaN            NaN                 NaN  \n4     False                 NaN            NaN                 NaN  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>game starttime</th>\n      <th>game endtime</th>\n      <th>gameId</th>\n      <th>offense_team_id</th>\n      <th>offense_team_name</th>\n      <th>offense_team_tricode</th>\n      <th>goal</th>\n      <th>x_coords</th>\n      <th>y_coords</th>\n      <th>goalie_id</th>\n      <th>goalie_name</th>\n      <th>shooter_id</th>\n      <th>shooter_name</th>\n      <th>shot type</th>\n      <th>empty net</th>\n      <th>strength_shorthand</th>\n      <th>strength_even</th>\n      <th>strength_powerplay</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>-77.0</td>\n      <td>5.0</td>\n      <td>8467950</td>\n      <td>Craig Anderson</td>\n      <td>8478483</td>\n      <td>Mitchell Marner</td>\n      <td>Wrist Shot</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>1</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>86.0</td>\n      <td>13.0</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8467967</td>\n      <td>Chris Kelly</td>\n      <td>Wrist Shot</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>2</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>23.0</td>\n      <td>-38.0</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8476879</td>\n      <td>Cody Ceci</td>\n      <td>Wrist Shot</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>3</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>33.0</td>\n      <td>-15.0</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8474578</td>\n      <td>Erik Karlsson</td>\n      <td>Slap Shot</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>4</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>-34.0</td>\n      <td>28.0</td>\n      <td>8467950</td>\n      <td>Craig Anderson</td>\n      <td>8475716</td>\n      <td>Martin Marincin</td>\n      <td>Wrist Shot</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_starttime</th>\n",
+       "      <th>game_endtime</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>offense_team_id</th>\n",
+       "      <th>offense_team_name</th>\n",
+       "      <th>offense_team_tricode</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>x_coords</th>\n",
+       "      <th>y_coords</th>\n",
+       "      <th>...</th>\n",
+       "      <th>shooter_name</th>\n",
+       "      <th>shot_type</th>\n",
+       "      <th>prev_type</th>\n",
+       "      <th>prev_x_coords</th>\n",
+       "      <th>prev_y_coords</th>\n",
+       "      <th>prev_datetime</th>\n",
+       "      <th>empty_net</th>\n",
+       "      <th>strength_shorthand</th>\n",
+       "      <th>strength_even</th>\n",
+       "      <th>strength_powerplay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-10-12T23:19:59Z</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Toronto Maple Leafs</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-77.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mitchell Marner</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>Blocked Shot</td>\n",
+       "      <td>-61.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2016-10-12T23:19:59Z</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-10-12T23:21:41Z</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Chris Kelly</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>Giveaway</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>2016-10-12T23:21:41Z</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-10-12T23:23:17Z</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>-38.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Cody Ceci</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>Missed Shot</td>\n",
+       "      <td>-72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2016-10-12T23:22:59Z</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-10-12T23:24:02Z</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Erik Karlsson</td>\n",
+       "      <td>Slap Shot</td>\n",
+       "      <td>Missed Shot</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>2016-10-12T23:23:43Z</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-10-12T23:27:30Z</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Toronto Maple Leafs</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-34.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Martin Marincin</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>Hit</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2016-10-12T23:27:15Z</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         game_starttime          game_endtime  game_id              datetime  \\\n",
+       "0  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0  2016-10-12T23:19:59Z   \n",
+       "1  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0  2016-10-12T23:21:41Z   \n",
+       "2  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0  2016-10-12T23:23:17Z   \n",
+       "3  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0  2016-10-12T23:24:02Z   \n",
+       "4  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0  2016-10-12T23:27:30Z   \n",
+       "\n",
+       "   offense_team_id    offense_team_name offense_team_tricode  goal  x_coords  \\\n",
+       "0               10  Toronto Maple Leafs                  TOR     0     -77.0   \n",
+       "1                9      Ottawa Senators                  OTT     0      86.0   \n",
+       "2                9      Ottawa Senators                  OTT     0      23.0   \n",
+       "3                9      Ottawa Senators                  OTT     0      33.0   \n",
+       "4               10  Toronto Maple Leafs                  TOR     0     -34.0   \n",
+       "\n",
+       "   y_coords  ...     shooter_name   shot_type     prev_type prev_x_coords  \\\n",
+       "0       5.0  ...  Mitchell Marner  Wrist Shot  Blocked Shot         -61.0   \n",
+       "1      13.0  ...      Chris Kelly  Wrist Shot      Giveaway          54.0   \n",
+       "2     -38.0  ...        Cody Ceci  Wrist Shot   Missed Shot         -72.0   \n",
+       "3     -15.0  ...    Erik Karlsson   Slap Shot   Missed Shot          77.0   \n",
+       "4      28.0  ...  Martin Marincin  Wrist Shot           Hit          47.0   \n",
+       "\n",
+       "   prev_y_coords         prev_datetime empty_net strength_shorthand  \\\n",
+       "0           11.0  2016-10-12T23:19:59Z     False                NaN   \n",
+       "1           -5.0  2016-10-12T23:21:41Z     False                NaN   \n",
+       "2            0.0  2016-10-12T23:22:59Z     False                NaN   \n",
+       "3           -2.0  2016-10-12T23:23:43Z     False                NaN   \n",
+       "4           34.0  2016-10-12T23:27:15Z     False                NaN   \n",
+       "\n",
+       "   strength_even  strength_powerplay  \n",
+       "0            NaN                 NaN  \n",
+       "1            NaN                 NaN  \n",
+       "2            NaN                 NaN  \n",
+       "3            NaN                 NaN  \n",
+       "4            NaN                 NaN  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
-   ],
-   "source": [
-    "df = NHLCleaner.format_season('../data/raw/20162017.json')\n",
-    "df.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -185,32 +382,67 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [],
    "source": [
     "df.to_csv('../data/tabular/20162017.csv', index=False)"
    ],
+   "outputs": [],
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "NHLCleaner.format_folder('ift6758/data/raw/', 'ift6758/data/tabular/')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ift6758/data/raw/.DS_Store\n",
+      "ift6758/data/raw/.DS_Store not JSON\n",
+      "ift6758/data/raw/20172018.json\n",
+      "ift6758/data/raw/20192020.json\n",
+      "ift6758/data/raw/20202021.json\n",
+      "ift6758/data/raw/20212022.json\n",
+      "ift6758/data/raw/NHL.zip\n",
+      "ift6758/data/raw/NHL.zip not JSON\n",
+      "ift6758/data/raw/20182019.json\n",
+      "ift6758/data/raw/20162017.json\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
+   "pygments_lexer": "ipython3",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "file_extension": ".py"
+  },
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   }
  },
  "nbformat": 4,
