--- a/notebooks/8.do-your-best.ipynb
+++ b/notebooks/8.do-your-best.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "8fbb8078",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d5e465",
+   "id": "646052eb",
    "metadata": {},
    "source": [
     "**OPTIMISER LES HYPERPARAMÈTRES POUR ADAPTATIVE BOOSTING**"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b8de83a4",
+   "id": "e50a35dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bb005b18",
+   "id": "0239a173",
    "metadata": {},
    "outputs": [
     {
@@ -409,9 +409,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55cdb91e",
+   "metadata": {},
+   "source": [
+    "**DÉFINIR UNE MEILLEURE FONCTION DE PARTITIONNEMENT DES DONNÉES**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b13a5c2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_test_split_alternating(X, y, factor=5):\n",
+    "    print(X)\n",
+    "    X['mod'] = X['game_id'].mod(factor)\n",
+    "    X_test  = X.loc[X['mod']==0]\n",
+    "    X_train = X.loc[X['mod']!=0]\n",
+    "    y_test  = y.loc[X['mod']==0]\n",
+    "    y_train = y.loc[X['mod']!=0]\n",
+    "    return (X_train, X_test, y_train, y_test)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c6d9463d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        shot_distance  shot_angle  dist_prev_event  \\\n",
+      "0           13.000000   67.380135       138.924440   \n",
+      "1           13.341664   12.994617        36.715120   \n",
+      "2           76.157731   60.068488       102.318131   \n",
+      "3           57.974132   75.004921        45.880279   \n",
+      "4           61.717096   63.019769        63.348244   \n",
+      "...               ...         ...              ...   \n",
+      "477281      40.311289   43.994914       139.645981   \n",
+      "477282      10.049876   84.289407         0.000000   \n",
+      "477283      30.463092   66.801409        12.806248   \n",
+      "477284      17.000000   90.000000         5.385165   \n",
+      "477285      28.017851   87.954592        22.472205   \n",
+      "\n",
+      "        time_lapsed_prev_event_in_seconds  game_secs  game_id  \n",
+      "0                                       0         71        0  \n",
+      "1                                       0        173        0  \n",
+      "2                                      18        241        0  \n",
+      "3                                      19        286        0  \n",
+      "4                                      15        406        0  \n",
+      "...                                   ...        ...      ...  \n",
+      "477281                                  7       3114     1400  \n",
+      "477282                                  0       3117     1400  \n",
+      "477283                                 11       3207     1400  \n",
+      "477284                                  5       3504     1400  \n",
+      "477285                                  7       3532     1400  \n",
+      "\n",
+      "[477286 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'game_id' not in features:\n",
+    "    features.append('game_id')\n",
+    "X = df[features]\n",
+    "X_nona = X.fillna(0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split_alternating(X_nona, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "96dc6c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9039177154325375\n",
+      "[[86364   132]\n",
+      " [ 9060   112]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train = y_train.squeeze().ravel()\n",
+    "y_test  = y_test.squeeze().ravel()\n",
+    "\n",
+    "model = AdaBoostClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_pred), confusion_matrix(y_test, y_pred), sep='\\n')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcef0952",
+   "id": "dd909a7d",
    "metadata": {},
    "outputs": [],
    "source": []
